fix display article on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -235,7 +235,7 @@ quote{
 }
 
 .about article{
-  display: flex;
+  display: block;
 }
 
   }
