--- a/css/contact.css
+++ b/css/contact.css
@@ -230,7 +230,7 @@ img{
 }
 
 .contact article{
-	display: flex;
+	display: block;
 }
 
 	}
