--- a/css/press.css
+++ b/css/press.css
@@ -165,6 +165,6 @@ img{
 	}
 	
 	.press article{
-		display: flex;
+		display: block;
 	}
 }
